--- a/OrderOfEvents/Base.lproj/Main.storyboard
+++ b/OrderOfEvents/Base.lproj/Main.storyboard
@@ -23,11 +23,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1014" y="-142"/>
         </scene>
-        <!--View Controller-->
+        <!--Middle View Controller-->
         <scene sceneID="Qle-0Y-e9k">
             <objects>
-                <viewController id="08P-YY-72X" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KgU-rf-3Af" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="08P-YY-72X" customClass="MiddleViewController" customModule="OrderOfEvents" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fkK-dy-puO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,14 +37,14 @@
                         <viewLayoutGuide key="safeArea" id="DtI-BK-e0T"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KgU-rf-3Af" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="588" y="117"/>
+            <point key="canvasLocation" x="1015" y="583"/>
         </scene>
-        <!--View Controller-->
+        <!--Last View Controller-->
         <scene sceneID="ytx-7C-n5A">
             <objects>
-                <viewController id="9Fj-kU-jLb" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nzR-FR-xIf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="9Fj-kU-jLb" customClass="LastViewController" customModule="OrderOfEvents" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NbO-U0-yAi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -50,9 +52,8 @@
                         <viewLayoutGuide key="safeArea" id="qG4-C2-Eno"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nzR-FR-xIf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1273" y="116"/>
+            <point key="canvasLocation" x="1748" y="584"/>
         </scene>
     </scenes>
 </document>
