--- a/OrderOfEvents/Base.lproj/Main.storyboard
+++ b/OrderOfEvents/Base.lproj/Main.storyboard
@@ -17,7 +17,21 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qqU-d1-gek">
+                                <rect key="frame" x="31.5" y="309.5" width="311" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Show Me The Life Cycle"/>
+                                <connections>
+                                    <segue destination="08P-YY-72X" kind="show" id="npL-q6-BXV"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qqU-d1-gek" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oAj-xV-9dV"/>
+                            <constraint firstItem="qqU-d1-gek" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vgW-8d-6pK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="jSs-An-Kzb"/>
