add nothing ahs happened yet label to middleVC

--- a/OrderOfEvents/Base.lproj/Main.storyboard
+++ b/OrderOfEvents/Base.lproj/Main.storyboard
@@ -57,11 +57,19 @@
                                     <segue destination="9Fj-kU-jLb" kind="show" id="wfN-Li-oqV"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nothing Has Happened Yet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Shy-cz-ZZp">
+                                <rect key="frame" x="83.5" y="124" width="207.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3M2-L8-ROh" firstAttribute="centerY" secondItem="fkK-dy-puO" secondAttribute="centerY" id="06n-lJ-crS"/>
+                            <constraint firstItem="Shy-cz-ZZp" firstAttribute="top" secondItem="DtI-BK-e0T" secondAttribute="top" constant="60" id="bGy-Ru-LBZ"/>
                             <constraint firstItem="3M2-L8-ROh" firstAttribute="centerX" secondItem="fkK-dy-puO" secondAttribute="centerX" id="vF5-yh-yuQ"/>
+                            <constraint firstItem="Shy-cz-ZZp" firstAttribute="centerX" secondItem="fkK-dy-puO" secondAttribute="centerX" id="xah-We-u6a"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DtI-BK-e0T"/>
                     </view>
